Added lazy loading to first pic

--- a/index.html
+++ b/index.html
@@ -214,10 +214,7 @@
 
 
                 <div class="image-container">
-                    <img data-src="./images/grad_pic.jpg" alt="Picture of Aaron Hurtado" onclick="openFullscreen(this)" class="clickable-image first-pic" width="1365" height="1483">
-                    <noscript>
-                        <img src="./images/grad_pic.jpg" alt="Picture of Aaron Hurtado" class="clickable-image first-pic" width="1365" height="1483">
-                    </noscript>
+                    <img src="./images/grad_pic.jpg" alt="Picture of Aaron Hurtado" onclick="openFullscreen(this)" class="clickable-image" width="1365" height="1483" loading="lazy">
                 </div>
             </div>
         </section>
