--- a/index.html
+++ b/index.html
@@ -231,7 +231,8 @@
                     <a href="https://www.ucsd.edu/" target="_blank" rel="noopener noreferrer">
                         <img src="./images/ucsd_seal.webp" alt="UCSD Seal" loading="lazy" width="1920" height="1920">
                     </a>
-                    <img src="./images/ucsd_lib.webp" alt="UCSD Library" onclick="openFullscreen(this)" class="clickable-image" loading="lazy" width="3803" height="2539">
+                    <img src="./images/ucsd_lib_570.webp" srcset="./images/ucsd_lib_184.webp 184w, ./images/ucsd_lib_570.webp 570w, ./images/ucsd_lib_686.webp 686w, ./images/ucsd_lib.webp 3803w" sizes="(max-width: 767px) 160px, (max-width: 2559px) 350px, 650px" alt="UCSD Library" onclick="openFullscreen(this)" class="clickable-image" loading="lazy" width="3803" height="2539">
+                    <!-- <img src="./images/ucsd_lib.webp" alt="UCSD Library" onclick="openFullscreen(this)" class="clickable-image" loading="lazy" width="3803" height="2539"> -->
                 </div>
 
                 <div class="text-container medium-gap">
