Testing meta theme-color

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 
     <link rel="canonical" href="https://www.aaronhurtado.com/">
 
-    <meta name="theme-color" media="(prefers-color-scheme: dark)" content="rgb(35, 39, 47)">
+    <!-- <meta name="theme-color" media="(prefers-color-scheme: dark)" content="rgb(35, 39, 47)"> -->
+    <meta name="theme-color" content="rgb(35, 39, 47)">
 
     <meta name="google-site-verification" content="CfzffrMvebTwHtxsjG88LFqpnLldm0LLwFQTeiA2Lnc"/>
 
