--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <!-- <meta name="theme-color" media="(prefers-color-scheme: dark)" content="rgb(35, 39, 47)"> -->
     <!-- <meta name="theme-color" content="rgb(35, 39, 47)"> -->
-    <meta name="theme-color" content="#23272F">
+    <meta name="theme-color" content="#23272f"/>
 
     <meta name="google-site-verification" content="CfzffrMvebTwHtxsjG88LFqpnLldm0LLwFQTeiA2Lnc"/>
 
