Added lazy loading for parallax images

--- a/index.html
+++ b/index.html
@@ -17,9 +17,7 @@
 
     <link rel="canonical" href="https://www.aaronhurtado.com/">
 
-    <!-- <meta name="theme-color" media="(prefers-color-scheme: dark)" content="rgb(35, 39, 47)"> -->
-    <!-- <meta name="theme-color" content="rgb(35, 39, 47)"> -->
-    <meta name="theme-color" content="#23272f"/>
+    <meta name="theme-color" media="(prefers-color-scheme: dark)" content="#23272f">
 
     <meta name="google-site-verification" content="CfzffrMvebTwHtxsjG88LFqpnLldm0LLwFQTeiA2Lnc"/>
 
@@ -231,9 +229,9 @@
 
                 <div class="image-container" id="UCSD-pics">
                     <a href="https://www.ucsd.edu/" target="_blank" rel="noopener noreferrer">
-                        <img src="./images/ucsd_seal_570.webp" srcset="./images/ucsd_seal_184.webp 184w, ./images/ucsd_seal_570.webp 570w, ./images/ucsd_seal_686.webp 686w, ./images/ucsd_seal.webp 1920w" sizes="(max-width: 767px) 160px, (max-width: 2559px) 350px, 650px" alt="UCSD Seal" loading="lazy" width="1920" height="1920">
+                        <img src="./images/ucsd_seal_570.webp" srcset="./images/ucsd_seal_184.webp 184w, ./images/ucsd_seal_570.webp 570w, ./images/ucsd_seal_686.webp 686w, ./images/ucsd_seal.webp 1920w" sizes="(max-width: 767px) 160px, (max-width: 2559px) 350px, 650px" alt="UCSD Seal" loading="lazy" width="675" height="675">
                     </a>
-                    <img src="./images/ucsd_lib_570.webp" srcset="./images/ucsd_lib_184.webp 184w, ./images/ucsd_lib_570.webp 570w, ./images/ucsd_lib_686.webp 686w, ./images/ucsd_lib.webp 3803w" sizes="(max-width: 767px) 160px, (max-width: 2559px) 350px, 650px" alt="UCSD Library" onclick="openFullscreen(this)" class="clickable-image" loading="lazy" width="3803" height="2539">
+                    <img src="./images/ucsd_lib_570.webp" srcset="./images/ucsd_lib_184.webp 184w, ./images/ucsd_lib_570.webp 570w, ./images/ucsd_lib_686.webp 686w, ./images/ucsd_lib.webp 3803w" sizes="(max-width: 767px) 160px, (max-width: 2559px) 350px, 650px" alt="UCSD Library" onclick="openFullscreen(this)" class="clickable-image" loading="lazy" width="675" height="450">
                     <!-- <img src="./images/ucsd_lib.webp" alt="UCSD Library" onclick="openFullscreen(this)" class="clickable-image" loading="lazy" width="3803" height="2539"> -->
                 </div>
 
@@ -261,7 +259,7 @@
                 </div>
 
 
-                <div class="parallax-container parallax-container-1"> </div>
+                <div class="parallax-container parallax-container-1" data-src="./images/ucsd_lib2.png"> </div>
 
 
                 <div class="image-container">
@@ -1123,7 +1121,7 @@
                 </div>
                 
 
-                <div class="parallax-container parallax-container-2"> </div>
+                <div class="parallax-container parallax-container-2" data-src="./images/matrix.jpg"> </div>
 
 
             </div>
