--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <link rel="stylesheet" href="./style.css">
     <!-- <link rel="preload" href="./fonts/Roboto-VariableFont_wdth,wght.ttf" as="font" type="font/ttf" crossorigin> -->
     <link rel="preload" href="./fonts/Roboto-VariableFont_wdth,wght.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preconnect" href="https://www.clarity.ms" crossorigin>
 
     <script type="application/ld+json">
         {
