--- a/src/index.html
+++ b/src/index.html
@@ -24,10 +24,9 @@
     <title>Aaron Hurtado's Website</title>
 
     <link rel="icon" type="image/png" href="./images/favicon1.png">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <!-- <link rel="preload" href="./fonts/Roboto-VariableFont_wdth,wght.ttf" as="font" type="font/ttf" crossorigin> -->
     <link rel="preload" href="./fonts/Roboto-VariableFont_wdth,wght.woff2" as="font" type="font/woff2" crossorigin>
-    <link rel="preconnect" href="https://www.clarity.ms" crossorigin>
 
     <script type="application/ld+json">
         {
@@ -48,7 +47,8 @@
         }
     </script>
 
-    <script type="text/javascript">
+    <link rel="preconnect" href="https://www.clarity.ms" crossorigin>
+    <script async type="text/javascript">
         (function(c,l,a,r,i,t,y){
             c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
             t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
@@ -1161,7 +1161,7 @@
 
     </main>
 
-    <script src="./script.js"></script>
+    <script src="./js/script.js"></script>
     <script defer src="/_vercel/insights/script.js"></script>
     <script defer src="/_vercel/speed-insights/script.js"></script>
 </body>
