--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,7 @@
     <meta property="og:image" content="https://www.aaronhurtado.com/images/grad_pic.jpg">
     <meta property="og:url" content="https://www.aaronhurtado.com/">
     <meta property="og:type" content="website">
+    <meta property="og:site_name" content="Aaron Hurtado's Website">
 
     <link rel="canonical" href="https://www.aaronhurtado.com/">
 
