Added img so parcel builds it

--- a/src/index.html
+++ b/src/index.html
@@ -261,7 +261,9 @@
                 </div>
 
 
-                <div class="parallax-container parallax-container-1" data-src="./images/ucsd_lib2.png"> </div>
+                <div class="parallax-container parallax-container-1" data-src="./images/ucsd_lib2.png"> 
+                    <img src="./images/ucsd_lib2.png" alt="UCSD Geisel library at sunset" loading="lazy">
+                </div>
 
 
                 <div class="image-container">
@@ -1123,7 +1125,9 @@
                 </div>
                 
 
-                <div class="parallax-container parallax-container-2" data-src="./images/matrix.jpg"> </div>
+                <div class="parallax-container parallax-container-2" data-src="./images/matrix.jpg"> 
+                    <img src="./images/matrix.jpg" alt="Binary 1s and 0s" loading="lazy">
+                </div>
 
 
             </div>
