--- a/src/index.html
+++ b/src/index.html
@@ -261,7 +261,8 @@
                 </div>
 
 
-                <div class="parallax-container parallax-container-1" data-src="./images/ucsd_lib2.png"> 
+                <!-- <div class="parallax-container parallax-container-1" data-src="./images/ucsd_lib2.png">  -->
+                <div class="parallax-container parallax-container-1" data-src=""> 
                     <img src="./images/ucsd_lib2.png" alt="UCSD Geisel library at sunset" loading="lazy">
                 </div>
 
@@ -1125,7 +1126,7 @@
                 </div>
                 
 
-                <div class="parallax-container parallax-container-2" data-src="./images/matrix.jpg"> 
+                <div class="parallax-container parallax-container-2" data-src=""> 
                     <img src="./images/matrix.jpg" alt="Binary 1s and 0s" loading="lazy">
                 </div>
 
@@ -1166,7 +1167,7 @@
 
     </main>
 
-    <script src="./js/script.js"></script>
+    <script type="module" src="./js/script.js"></script>
     <!-- <script defer src="/_vercel/insights/script.js"></script> -->
     <!-- <script defer src="/_vercel/speed-insights/script.js"></script> -->
 
