--- a/src/index.html
+++ b/src/index.html
@@ -231,10 +231,11 @@
 
                 <div class="image-container" id="UCSD-pics">
                     <a href="https://www.ucsd.edu/" target="_blank" rel="noopener noreferrer">
-                        <img src="./images/ucsd_seal_570.webp" srcset="./images/ucsd_seal_184.webp 184w, ./images/ucsd_seal_570.webp 570w, ./images/ucsd_seal_686.webp 686w, ./images/ucsd_seal.webp 1920w" sizes="(max-width: 767px) 160px, (max-width: 2559px) 350px, 650px" alt="UCSD Seal" loading="lazy" width="675" height="675">
+                        <!-- <img src="./images/ucsd_seal_570.webp" srcset="./images/ucsd_seal_184.webp 184w, ./images/ucsd_seal_570.webp 570w, ./images/ucsd_seal_686.webp 686w, ./images/ucsd_seal.webp 1920w" sizes="(max-width: 767px) 160px, (max-width: 2559px) 350px, 650px" alt="UCSD Seal" loading="lazy" width="675" height="675"> -->
+                        <img src="./images/ucsd_seal.webp" srcset="./images/ucsd_seal.webp?width=184 184w, ./images/ucsd_seal.webp?width=376 376w, ./images/ucsd_seal.webp?width=570 570w, ./images/ucsd_seal.webp?width=686 686w, ./images/ucsd_seal.webp 3803w" sizes="(max-width: 767px) 160px, (max-width: 2559px) 350px, 650px" alt="UCSD Library" onclick="openFullscreen(this)" class="clickable-image" loading="lazy" width="3803" height="2539">
                     </a>
-                    <img src="./images/ucsd_lib_570.webp" srcset="./images/ucsd_lib_184.webp 184w, ./images/ucsd_lib_570.webp 570w, ./images/ucsd_lib_686.webp 686w, ./images/ucsd_lib.webp 3803w" sizes="(max-width: 767px) 160px, (max-width: 2559px) 350px, 650px" alt="UCSD Library" onclick="openFullscreen(this)" class="clickable-image" loading="lazy" width="675" height="450">
                     <!-- <img src="./images/ucsd_lib.webp" alt="UCSD Library" onclick="openFullscreen(this)" class="clickable-image" loading="lazy" width="3803" height="2539"> -->
+                    <img src="./images/ucsd_lib.webp" srcset="./images/ucsd_lib.webp?width=184 184w, ./images/ucsd_lib.webp?width=376 376w, ./images/ucsd_lib.webp?width=570 570w, ./images/ucsd_lib.webp?width=686 686w, ./images/ucsd_lib.webp 3803w" sizes="(max-width: 767px) 160px, (max-width: 2559px) 350px, 650px" alt="UCSD Library" onclick="openFullscreen(this)" class="clickable-image" loading="lazy" width="3803" height="2539">
                 </div>
 
                 <div class="text-container medium-gap">
