--- a/src/index.html
+++ b/src/index.html
@@ -5,16 +5,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <meta name="description" content="Aaron Hurtado's personal website showcasing software engineering portfolio, resume, experience, and projects">
+    <meta name="description" content="Aaron Hurtado's personal website showcasing software engineering portfolio, resume, experience, and projects.">
     <meta name="keywords" content="Aaron Hurtado, Software Engineer, Web Development, Portfolio, Resume, Projects">
     <meta name="author" content="Aaron Hurtado">
 
     <meta property="og:title" content="Aaron Hurtado's Website">
-    <meta property="og:description" content="Aaron Hurtado's personal website showcasing software engineering portfolio, resume, experience, and projects">
+    <meta property="og:description" content="Aaron Hurtado's personal website showcasing software engineering portfolio, resume, experience, and projects.">
     <meta property="og:image" content="https://www.aaronhurtado.com/images/grad_pic.jpg">
     <meta property="og:url" content="https://www.aaronhurtado.com/">
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="Aaron Hurtado's Website">
+
+    <meta property="twitter:image" content="https://www.aaronhurtado.com/images/grad_pic.jpg">
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:title" content="Aaron Hurtado's Website">
+    <meta property="twitter:description" content="Aaron Hurtado's personal website showcasing software engineering portfolio, resume, experience, and projects.">
 
     <link rel="canonical" href="https://www.aaronhurtado.com/">
 
