--- a/src/index.html
+++ b/src/index.html
@@ -175,7 +175,7 @@
                     <ul>
                         <li>
                             <h4>Programming Languages:</h4>
-                            Java, C, C++, Python, C#, JavaScript, Bash, YAML, OCaml, SPARC Assembly, Bro (Zeek)
+                            Java, C, C++, Python, C#, JavaScript, Bash, YAML, OCaml, SPARC Assembly 
                         </li>
                         <li>
                             <h4>Frontend:</h4>
@@ -210,8 +210,16 @@
                             Linux, Windows, macOS
                         </li>
                         <li>
-                            <h4>Software/Development Tools:</h4>
-                            Ninja, Clang, Maven, Apache Ant, Makefiles, Vim, Virtual Machines, WireShark, PhantomJS, LaTeX, Microsoft Office (Word, Excel, PowerPoint), UML, Visual Studio Code, Eclipse, VirtualBox, VMware, Cursor
+                            <h4>Software & Development Tools:</h4>
+                            <ul>
+                                <li><strong>Build Tools:</strong> Ninja, Parcel, Maven, Apache Ant, Makefiles</li>
+                                <li><strong>Compilers:</strong> Clang</li>
+                                <li><strong>Editors/IDEs:</strong> Vim, Visual Studio Code, Eclipse, Cursor</li>
+                                <li><strong>Virtualization:</strong> Virtual Machines, VirtualBox, VMware</li>
+                                <li><strong>Networking:</strong> WireShark, Zeek (formerly Bro)</li>
+                                <li><strong>Headless Browsers:</strong> Selenium WebDriver, PhantomJS, CasperJS</li>
+                                <li><strong>Documentation/Publishing:</strong> LaTeX, UML, Microsoft Office (Word, Excel, PowerPoint)</li>
+                            </ul>
                         </li>
                     </ul>
                 </div>
@@ -238,13 +246,13 @@
                     <a href="https://www.ucsd.edu/" target="_blank" rel="noopener noreferrer">
                         <!-- <img src="./images/ucsd_seal_570.webp" srcset="./images/ucsd_seal_184.webp 184w, ./images/ucsd_seal_570.webp 570w, ./images/ucsd_seal_686.webp 686w, ./images/ucsd_seal.webp 1920w" sizes="(max-width: 767px) 160px, (max-width: 2559px) 350px, 650px" alt="UCSD Seal" loading="lazy" width="675" height="675"> -->
 
-                        <img src="./images/ucsd_seal.webp" alt="UCSD Library" onclick="openFullscreen(this)" class="clickable-image" loading="lazy" width="3803" height="2539">
+                        <img src="./images/ucsd_seal.webp" alt="UCSD Library" onclick="openFullscreen(this)" class="clickable-image" loading="lazy" width="960" height="960">
                         <!-- <img src="./images/ucsd_seal.webp" srcset="./images/ucsd_seal.webp?width=184 184w, ./images/ucsd_seal.webp?width=570 570w, ./images/ucsd_seal.webp?width=686 686w, ./images/ucsd_seal.webp 3803w" sizes="(max-width: 767px) 160px, (max-width: 2559px) 350px, 650px" alt="UCSD Library" onclick="openFullscreen(this)" class="clickable-image" loading="lazy" width="3803" height="2539"> -->
                         <!-- <img src="./images/ucsd_seal.webp" srcset="./images/ucsd_seal.webp?width=184&quality=92 184w, ./images/ucsd_seal.webp?width=570&quality=92 570w, ./images/ucsd_seal.webp?width=686&quality=92 686w, ./images/ucsd_seal.webp 3803w" sizes="(max-width: 767px) 160px, (max-width: 2559px) 350px, 650px" alt="UCSD Library" onclick="openFullscreen(this)" class="clickable-image" loading="lazy" width="3803" height="2539"> -->
                     </a>
                     <!-- <img src="./images/ucsd_lib.webp" alt="UCSD Library" onclick="openFullscreen(this)" class="clickable-image" loading="lazy" width="3803" height="2539"> -->
                     <!-- <img src="./images/ucsd_lib.webp" srcset="./images/ucsd_lib.webp?width=184 184w, ./images/ucsd_lib.webp?width=570 570w, ./images/ucsd_lib.webp?width=686 686w, ./images/ucsd_lib.webp 3803w" sizes="(max-width: 767px) 160px, (max-width: 2559px) 350px, 650px" alt="UCSD Library" onclick="openFullscreen(this)" class="clickable-image" loading="lazy" width="3803" height="2539"> -->
-                    <img src="./images/ucsd_lib.webp" srcset="./images/ucsd_lib.webp?width=200&quality=100 200w, ./images/ucsd_lib.webp?width=950&quality=100 950w, ./images/ucsd_lib.webp?width=1900&quality=100 1900w, ./images/ucsd_lib.webp 3803w" sizes="(max-width: 767px) 160px, (max-width: 2559px) 350px, 650px" alt="UCSD Library" onclick="openFullscreen(this)" class="clickable-image" loading="lazy" width="3803" height="2539">
+                    <img src="./images/ucsd_lib.webp" srcset="./images/ucsd_lib.webp?width=200&quality=100 200w, ./images/ucsd_lib.webp?width=950&quality=100 950w, ./images/ucsd_lib.webp?width=1900&quality=100 1900w, ./images/ucsd_lib.webp 3803w" sizes="(max-width: 767px) 160px, (max-width: 2559px) 350px, 650px" alt="UCSD Library" onclick="openFullscreen(this)" class="clickable-image" loading="lazy" width="1904" height="1269">
                 </div>
 
                 <div class="text-container medium-gap">
@@ -273,7 +281,7 @@
 
                 <!-- <div class="parallax-container parallax-container-1" data-src="./images/ucsd_lib2.png">  -->
                 <div class="parallax-container parallax-container-1" data-src=""> 
-                    <img src="./images/ucsd_lib2.png" alt="UCSD Geisel library at sunset" loading="lazy">
+                    <img src="./images/ucsd_lib2.png" alt="UCSD Geisel library at sunset" loading="lazy" width="1200" height="628">
                 </div>
 
 
@@ -406,11 +414,11 @@
 
                 <div class="image-container">
                     <figure>
-                        <img src="./images/centene_location.webp" alt="Centene Location" onclick="openFullscreen(this)" class="clickable-image" loading="lazy" width="1920" height="1280">
+                        <img src="./images/centene_location.webp" alt="Centene Location" onclick="openFullscreen(this)" class="clickable-image" loading="lazy" width="960" height="640">
                         <figcaption>San Diego Office</figcaption>
                     </figure>
                     <a href="https://www.centene.com/" target="_blank" rel="noopener noreferrer">
-                        <img src="./images/centene_logo.png" alt="Centene Logo" id="centene_logo" loading="lazy" width="2560" height="634">
+                        <img src="./images/centene_logo.png" alt="Centene Logo" id="centene_logo" loading="lazy" width="1280" height="317">
                     </a>
                 </div>
 
@@ -459,10 +467,10 @@
 
                 <div class="image-container">
                     <a href="https://www.epsilonsystems.com/" target="_blank" rel="noopener noreferrer">
-                        <img src="./images/epsilon_logo.jfif" alt="Epsilon Systems Solutions Logo" loading="lazy" width="800" height="421">
+                        <img src="./images/epsilon_logo.jfif" alt="Epsilon Systems Solutions Logo" loading="lazy" width="400" height="211">
                     </a>
                     <a href="https://www.rtx.com/" target="_blank" rel="noopener noreferrer">
-                        <img src="./images/raytheon.jfif" alt="Raytheon Logo" loading="lazy" width="1920" height="1280">
+                        <img src="./images/raytheon.jfif" alt="Raytheon Logo" loading="lazy" width="960" height="640">
                     </a>
                 </div>
 
@@ -868,7 +876,7 @@
 
 
                 <p>
-                    This website was created by me to showcase my experience, projects, and website/visual design skills. I wrote all of the code for this website myself from scratch (HTML, CSS, and JavaScript). I chose the design, layout, typography, and colors of the website. I did not use any pre-made templates, themes, or frameworks.
+                    This website was created by me to showcase my experience, projects, and website/visual design skills. I wrote all of the code for this website myself from scratch (HTML, CSS, and JavaScript). Also uses Node.js and <a href="https://parceljs.org/" target="_blank" rel="noopener noreferrer">Parcel</a> for bundling, optimization, and minification. I chose the design, layout, typography, and colors of the website. I did not use any pre-made templates, themes, or frameworks.
                 </p>
                 
 
@@ -899,7 +907,13 @@
                         Some of the images on the website have built in links that will take you to relevant information when clicked on. If you click on the image below it will take you to the GitHub repository for this website.
                     </li>
                     <li>
-                        If you click on one of the headers in the Experience section or Projects section (e.g. "Centene Corporation" or "Cryptocurrency Trading Bot"), it will copy the link to that section to your clipboard. This is useful if you want to share a specific section with someone.
+                        If you click on one of the headers in the Experience section or Projects section (e.g. "Centene Corporation" or "Cryptocurrency Trading Bot"), it will copy the link to that section to your clipboard.
+                    </li>
+                    <li>
+                        If you click on one of the headers in the Experience section or Projects section (e.g. "Centene Corporation" or "Cryptocurrency Trading Bot"), it will copy the link to that section to your clipboard.
+                    </li>
+                    <li>
+                        Uses Node.js for the backend and Parcel for bundling, optimization, and minification of the website's assets.
                     </li>
                     <li>
                         Note: some of these features are disabled for mobile devices due to mobile browser limitations.
