Fixed image widths

--- a/src/index.html
+++ b/src/index.html
@@ -203,7 +203,7 @@
                         </li>
                         <li>
                             <h4>Project Management:</h4>
-                            Jira, Confluence, Trello, Agile, SCRUM, Kanban
+                            Jira, Confluence, Trello, Agile, Scrum, Kanban
                         </li>
                         <li>
                             <h4>Platforms:</h4>
@@ -217,7 +217,7 @@
                                 <li><strong>Editors/IDEs:</strong> Vim, Visual Studio Code, Eclipse, Cursor</li>
                                 <li><strong>Virtualization:</strong> Virtual Machines, VirtualBox, VMware</li>
                                 <li><strong>Networking:</strong> WireShark, Zeek (formerly Bro)</li>
-                                <li><strong>Headless Browsers:</strong> Selenium WebDriver, PhantomJS, CasperJS</li>
+                                <li><strong>Headless Browsers:</strong> ChromeDriver, Selenium WebDriver, PhantomJS, CasperJS</li>
                                 <li><strong>Documentation/Publishing:</strong> LaTeX, UML, Microsoft Office (Word, Excel, PowerPoint)</li>
                             </ul>
                         </li>
@@ -246,13 +246,13 @@
                     <a href="https://www.ucsd.edu/" target="_blank" rel="noopener noreferrer">
                         <!-- <img src="./images/ucsd_seal_570.webp" srcset="./images/ucsd_seal_184.webp 184w, ./images/ucsd_seal_570.webp 570w, ./images/ucsd_seal_686.webp 686w, ./images/ucsd_seal.webp 1920w" sizes="(max-width: 767px) 160px, (max-width: 2559px) 350px, 650px" alt="UCSD Seal" loading="lazy" width="675" height="675"> -->
 
-                        <img src="./images/ucsd_seal.webp" alt="UCSD Library" onclick="openFullscreen(this)" class="clickable-image" loading="lazy" width="960" height="960">
+                        <img src="./images/ucsd_seal.webp" alt="UCSD Library" onclick="openFullscreen(this)" class="clickable-image" loading="lazy" width="1920" height="960">
                         <!-- <img src="./images/ucsd_seal.webp" srcset="./images/ucsd_seal.webp?width=184 184w, ./images/ucsd_seal.webp?width=570 570w, ./images/ucsd_seal.webp?width=686 686w, ./images/ucsd_seal.webp 3803w" sizes="(max-width: 767px) 160px, (max-width: 2559px) 350px, 650px" alt="UCSD Library" onclick="openFullscreen(this)" class="clickable-image" loading="lazy" width="3803" height="2539"> -->
                         <!-- <img src="./images/ucsd_seal.webp" srcset="./images/ucsd_seal.webp?width=184&quality=92 184w, ./images/ucsd_seal.webp?width=570&quality=92 570w, ./images/ucsd_seal.webp?width=686&quality=92 686w, ./images/ucsd_seal.webp 3803w" sizes="(max-width: 767px) 160px, (max-width: 2559px) 350px, 650px" alt="UCSD Library" onclick="openFullscreen(this)" class="clickable-image" loading="lazy" width="3803" height="2539"> -->
                     </a>
                     <!-- <img src="./images/ucsd_lib.webp" alt="UCSD Library" onclick="openFullscreen(this)" class="clickable-image" loading="lazy" width="3803" height="2539"> -->
                     <!-- <img src="./images/ucsd_lib.webp" srcset="./images/ucsd_lib.webp?width=184 184w, ./images/ucsd_lib.webp?width=570 570w, ./images/ucsd_lib.webp?width=686 686w, ./images/ucsd_lib.webp 3803w" sizes="(max-width: 767px) 160px, (max-width: 2559px) 350px, 650px" alt="UCSD Library" onclick="openFullscreen(this)" class="clickable-image" loading="lazy" width="3803" height="2539"> -->
-                    <img src="./images/ucsd_lib.webp" srcset="./images/ucsd_lib.webp?width=200&quality=100 200w, ./images/ucsd_lib.webp?width=950&quality=100 950w, ./images/ucsd_lib.webp?width=1900&quality=100 1900w, ./images/ucsd_lib.webp 3803w" sizes="(max-width: 767px) 160px, (max-width: 2559px) 350px, 650px" alt="UCSD Library" onclick="openFullscreen(this)" class="clickable-image" loading="lazy" width="1904" height="1269">
+                    <img src="./images/ucsd_lib.webp" srcset="./images/ucsd_lib.webp?width=200&quality=100 200w, ./images/ucsd_lib.webp?width=950&quality=100 950w, ./images/ucsd_lib.webp?width=1900&quality=100 1900w, ./images/ucsd_lib.webp 3803w" sizes="(max-width: 767px) 160px, (max-width: 2559px) 350px, 650px" alt="UCSD Library" onclick="openFullscreen(this)" class="clickable-image" loading="lazy" width="3808" height="1269">
                 </div>
 
                 <div class="text-container medium-gap">
@@ -414,11 +414,11 @@
 
                 <div class="image-container">
                     <figure>
-                        <img src="./images/centene_location.webp" alt="Centene Location" onclick="openFullscreen(this)" class="clickable-image" loading="lazy" width="960" height="640">
+                        <img src="./images/centene_location.webp" alt="Centene Location" onclick="openFullscreen(this)" class="clickable-image" loading="lazy" width="1920" height="640">
                         <figcaption>San Diego Office</figcaption>
                     </figure>
                     <a href="https://www.centene.com/" target="_blank" rel="noopener noreferrer">
-                        <img src="./images/centene_logo.png" alt="Centene Logo" id="centene_logo" loading="lazy" width="1280" height="317">
+                        <img src="./images/centene_logo.png" alt="Centene Logo" id="centene_logo" loading="lazy" width="2560" height="317">
                     </a>
                 </div>
 
@@ -467,10 +467,10 @@
 
                 <div class="image-container">
                     <a href="https://www.epsilonsystems.com/" target="_blank" rel="noopener noreferrer">
-                        <img src="./images/epsilon_logo.jfif" alt="Epsilon Systems Solutions Logo" loading="lazy" width="400" height="211">
+                        <img src="./images/epsilon_logo.jfif" alt="Epsilon Systems Solutions Logo" loading="lazy" width="800" height="211">
                     </a>
                     <a href="https://www.rtx.com/" target="_blank" rel="noopener noreferrer">
-                        <img src="./images/raytheon.jfif" alt="Raytheon Logo" loading="lazy" width="960" height="640">
+                        <img src="./images/raytheon.jfif" alt="Raytheon Logo" loading="lazy" width="1920" height="640">
                     </a>
                 </div>
 
