--- a/src/index.html
+++ b/src/index.html
@@ -11,12 +11,12 @@
 
     <meta property="og:title" content="Aaron Hurtado's Website">
     <meta property="og:description" content="Aaron Hurtado's personal website showcasing software engineering portfolio, resume, experience, and projects.">
-    <meta property="og:image" content="">
+    <meta property="og:image" content="./images/stock_chart.webp">
     <meta property="og:url" content="https://www.aaronhurtado.com/">
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="Aaron Hurtado's Website">
 
-    <meta property="twitter:image" content="">
+    <meta property="twitter:image" content="./images/stock_chart.webp">
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:title" content="Aaron Hurtado's Website">
     <meta property="twitter:description" content="Aaron Hurtado's personal website showcasing software engineering portfolio, resume, experience, and projects.">
