Twitter fix pt. 2

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="Aaron Hurtado's Website">
 
-    <meta property="twitter:image" content="/images/stock_chart.webp">
+    <meta property="twitter:image" content="https://www.aaronhurtado.com/images/stock_chart.webp">
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:title" content="Aaron Hurtado's Website">
     <meta property="twitter:description" content="Aaron Hurtado's personal website showcasing software engineering portfolio, resume, experience, and projects.">
