Added banner images

--- a/src/index.html
+++ b/src/index.html
@@ -116,11 +116,18 @@
     </nav>
 
 
+    <header id="hero" class="hero">
+        <div class="hero-content">
+            <h1>Welcome</h1>
+        </div>
+    </header>
+
+
     <main>
         <section class="about_me" id="about_me">
             <div class="container">
 
-                <h1>Welcome</h1>
+                <!-- <h1>Welcome</h1> -->
 
                 <h2>About Me</h2>
 
