--- a/src/index.html
+++ b/src/index.html
@@ -899,6 +899,9 @@
                         Created a side navigation bar that automatically updates to show the current section the user is at. (Disabled on mobile devices due to limited screen space) 
                     </li>
                     <li>
+                        Everytime you refresh the website, the banner image at the top of the page is randomly selected. Showcases pictures primarily featuring San Diego, CA.
+                    </li>
+                    <li>
                         If you move your mouse over the main headings of the website (e.g. "Welcome", "Education"), a text shadow effect occurs.
                     </li>
                     <li>
