--- a/src/index.html
+++ b/src/index.html
@@ -277,11 +277,17 @@
                         From the fall of 2013 to the spring of 2017 I attended the University of California, San Diego where I
                         learned to program and the art of Software Engineering. 
                     </p>
+
                     <p>
                         During my time at UCSD, I learned everything from object-oriented programming and software design patterns to data structures and algorithms. I did the majority of my class work in Java, C++, and Python which are my main languages. During my time as a student I also worked as a tutor for the UCSD CSE department for several quarters. I tutored both lower and upper division data structure courses.
                     </p>
+
                     <p>
-                        A huge part of my time at UCSD was being accepted into the Early Research Scholars Program (ERSP) by the CSE department. I applied to the program the first year it was created and was one of 23 undergraduate students accepted into the program. The main purpose of the program was to expose and get undergraduate students involved in Computer Science Research which is typically done by graduate students and professors. As a result of the ERSP program, I spent three years working alongside graduate students and professors on their research projects in the <a href="https://www.sysnet.ucsd.edu/sysnet/" target="_blank" rel="noopener noreferrer">Systems and Networking Research Group</a> as well as the <a href="https://cryptosec.ucsd.edu/" target="_blank" rel="noopener noreferrer">Security and Cryptography Research Group</a>. The professors I worked with, who were the heads of the aforementioned research groups, were <a href="https://cseweb.ucsd.edu/~savage/" target="_blank" rel="noopener noreferrer">Stefan Savage</a> and <a href="https://cseweb.ucsd.edu/~voelker/" target="_blank" rel="noopener noreferrer">Geoffrey Voelker</a>. You can read about the projects I worked on while in this program in the <a href="#projects">Projects</a> section of this website. You can also learn more about the ERSP program by visiting the <a href="https://ersp.ucsd.edu/" target="_blank" rel="noopener noreferrer">ERSP website</a>.
+                        A huge part of my time at UCSD was being accepted into the Early Research Scholars Program (ERSP) by the CSE department. I applied to the program the first year it was created and was one of 23 undergraduate students accepted into the program. The main purpose of the program was to expose and get undergraduate students involved in Computer Science Research which is typically done by graduate students and professors. 
+                    </p>
+
+                    <p>
+                        As a result of the ERSP program, I spent three years working alongside graduate students and professors on their research projects in the <a href="https://www.sysnet.ucsd.edu/sysnet/" target="_blank" rel="noopener noreferrer">Systems and Networking Research Group</a> as well as the <a href="https://cryptosec.ucsd.edu/" target="_blank" rel="noopener noreferrer">Security and Cryptography Research Group</a>. The professors I worked with, who were the heads of the aforementioned research groups, were <a href="https://cseweb.ucsd.edu/~savage/" target="_blank" rel="noopener noreferrer">Stefan Savage</a> and <a href="https://cseweb.ucsd.edu/~voelker/" target="_blank" rel="noopener noreferrer">Geoffrey Voelker</a>. You can read about the projects I worked on while in this program in the <a href="#projects">Projects</a> section of this website. You can also learn more about the ERSP program by visiting the <a href="https://ersp.ucsd.edu/" target="_blank" rel="noopener noreferrer">ERSP website</a>.
                     </p>
                 </div>
 
