Adjusted parallax containers to use aspect-ratio

--- a/src/index.html
+++ b/src/index.html
@@ -294,7 +294,7 @@
 
                 <!-- <div class="parallax-container parallax-container-1" data-src="./images/ucsd_lib2.png">  -->
                 <div class="parallax-container parallax-container-1" data-src=""> 
-                    <img src="./images/ucsd_lib2.png" alt="UCSD Geisel library at sunset" loading="lazy" width="1200" height="628">
+                    <!-- <img src="./images/ucsd_lib2.png" alt="UCSD Geisel library at sunset" loading="lazy" width="1200" height="628"> -->
                 </div>
 
 
@@ -1167,7 +1167,7 @@
                 
 
                 <div class="parallax-container parallax-container-2" data-src=""> 
-                    <img src="./images/matrix.jpg" alt="Binary 1s and 0s" loading="lazy">
+                    <!-- <img src="./images/matrix.jpg" alt="Binary 1s and 0s" loading="lazy"> -->
                 </div>
 
 
