--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,7 @@
 
     <title>Aaron Hurtado's Website</title>
 
-    <link rel="icon" type="image/png" href="./images/favicon1.png">
+    <link rel="icon" type="image/png" href="./images/favicon.png">
     <link rel="stylesheet" href="./css/style.css">
     <!-- <link rel="preload" href="./fonts/Roboto-VariableFont_wdth,wght.ttf" as="font" type="font/ttf" crossorigin> -->
     <link rel="preload" href="./fonts/Roboto-VariableFont_wdth,wght.woff2" as="font" type="font/woff2" crossorigin>
