Added type module to script

--- a/src/index.html
+++ b/src/index.html
@@ -1208,7 +1208,7 @@
     <!-- <script defer src="/_vercel/insights/script.js"></script> -->
     <!-- <script defer src="/_vercel/speed-insights/script.js"></script> -->
 
-    <script>
+    <script type="module">
         // Load Vercel Insight scripts only in production
         // const isProduction = window.location.hostname !== 'localhost' && window.location.hostname !== '127.0.0.1';
         const isProduction = process.env.NODE_ENV === 'production';
