Added image resizing for the larger images on the site

--- a/src/index.html
+++ b/src/index.html
@@ -251,15 +251,10 @@
 
                 <div class="image-container" id="UCSD-pics">
                     <a href="https://www.ucsd.edu/" target="_blank" rel="noopener noreferrer">
-                        <!-- <img src="./images/ucsd_seal_570.webp" srcset="./images/ucsd_seal_184.webp 184w, ./images/ucsd_seal_570.webp 570w, ./images/ucsd_seal_686.webp 686w, ./images/ucsd_seal.webp 1920w" sizes="(max-width: 767px) 160px, (max-width: 2559px) 350px, 650px" alt="UCSD Seal" loading="lazy" width="675" height="675"> -->
 
                         <img src="./images/ucsd_seal.webp" alt="UCSD Library" onclick="openFullscreen(this)" class="clickable-image" loading="lazy" width="1920" height="960">
-                        <!-- <img src="./images/ucsd_seal.webp" srcset="./images/ucsd_seal.webp?width=184 184w, ./images/ucsd_seal.webp?width=570 570w, ./images/ucsd_seal.webp?width=686 686w, ./images/ucsd_seal.webp 3803w" sizes="(max-width: 767px) 160px, (max-width: 2559px) 350px, 650px" alt="UCSD Library" onclick="openFullscreen(this)" class="clickable-image" loading="lazy" width="3803" height="2539"> -->
-                        <!-- <img src="./images/ucsd_seal.webp" srcset="./images/ucsd_seal.webp?width=184&quality=92 184w, ./images/ucsd_seal.webp?width=570&quality=92 570w, ./images/ucsd_seal.webp?width=686&quality=92 686w, ./images/ucsd_seal.webp 3803w" sizes="(max-width: 767px) 160px, (max-width: 2559px) 350px, 650px" alt="UCSD Library" onclick="openFullscreen(this)" class="clickable-image" loading="lazy" width="3803" height="2539"> -->
                     </a>
-                    <!-- <img src="./images/ucsd_lib.webp" alt="UCSD Library" onclick="openFullscreen(this)" class="clickable-image" loading="lazy" width="3803" height="2539"> -->
-                    <!-- <img src="./images/ucsd_lib.webp" srcset="./images/ucsd_lib.webp?width=184 184w, ./images/ucsd_lib.webp?width=570 570w, ./images/ucsd_lib.webp?width=686 686w, ./images/ucsd_lib.webp 3803w" sizes="(max-width: 767px) 160px, (max-width: 2559px) 350px, 650px" alt="UCSD Library" onclick="openFullscreen(this)" class="clickable-image" loading="lazy" width="3803" height="2539"> -->
-                    <img src="./images/ucsd_lib.webp" srcset="./images/ucsd_lib.webp?width=200&quality=100 200w, ./images/ucsd_lib.webp?width=950&quality=100 950w, ./images/ucsd_lib.webp?width=1900&quality=100 1900w, ./images/ucsd_lib.webp 3803w" sizes="(max-width: 767px) 160px, (max-width: 2559px) 350px, 650px" alt="UCSD Library" onclick="openFullscreen(this)" class="clickable-image" loading="lazy" width="3808" height="1269">
+                    <img src="./images/ucsd_lib.webp" alt="UCSD Library" onclick="openFullscreen(this)" class="clickable-image" loading="lazy" width="3808" height="1269" srcset="./images/ucsd_lib.webp?width=800&quality=92 800w, ./images/ucsd_lib.webp?width=1200&quality=92 1200w, ./images/ucsd_lib.webp 3808w" sizes="(max-width: 767px) 90vw, (min-width: 2560px) 50vw, 60vw">
                 </div>
 
                 <div class="text-container medium-gap">
@@ -427,7 +422,7 @@
 
                 <div class="image-container">
                     <figure>
-                        <img src="./images/centene_location.webp" alt="Centene Location" onclick="openFullscreen(this)" class="clickable-image" loading="lazy" width="1920" height="640">
+                        <img src="./images/centene_location.webp" alt="Centene Location" onclick="openFullscreen(this)" class="clickable-image" loading="lazy" width="1920" height="640" srcset="./images/centene_location.webp?width=800&quality=92 800w, ./images/centene_location.webp?width=1200&quality=92 1200w, ./images/centene_location.webp 1920w" sizes="(max-width: 767px) 90vw, (min-width: 2560px) 50vw, 60vw">
                         <figcaption>San Diego Office</figcaption>
                     </figure>
                     <a href="https://www.centene.com/" target="_blank" rel="noopener noreferrer">
@@ -824,7 +819,7 @@
 
                 <div class="image-container">
                     <figure>
-                        <img src="./images/ps5_product_page.png" alt="PS5 Product Page" onclick="openFullscreen(this)" class="clickable-image" loading="lazy" width="2560" height="1440">
+                        <img src="./images/ps5_product_page.png" alt="PS5 Product Page" onclick="openFullscreen(this)" class="clickable-image" loading="lazy" width="2560" height="1440" srcset="./images/ps5_product_page.png?width=800&quality=92 800w, ./images/ps5_product_page.png?width=1200&quality=92 1200w, ./images/ps5_product_page.png 2560w" sizes="(max-width: 767px) 90vw, (min-width: 2560px) 50vw, 60vw">
                         <figcaption>PS5 Product Page</figcaption>
                     </figure>
                 </div>
@@ -874,7 +869,7 @@
 
                 <div class="tilt-card-container">
                     <div class="tilt-card image-container">
-                        <img src="./images/ps5.webp" alt="Playstation 5" loading="lazy" width="3840" height="2160">
+                        <img src="./images/ps5.webp" alt="Playstation 5" loading="lazy" width="3840" height="2160" srcset="./images/ps5.webp?width=800&quality=92 800w, ./images/ps5.webp?width=1200&quality=92 1200w, ./images/ps5.webp 3840w" sizes="(max-width: 767px) 90vw, (min-width: 2560px) 50vw, 60vw">
                     </div>
                 </div>
 
@@ -943,7 +938,7 @@
                 <div class="tilt-card-container">
                     <div class="tilt-card image-container">
                         <a href="https://github.com/aahurtado/my_website" target="_blank" rel="noopener">
-                            <img src="./images/my_website_github.png" alt="Picture of this website" loading="lazy" width="2545" height="1690">
+                            <img src="./images/my_website_github.png" alt="Picture of this website" loading="lazy" width="2545" height="1690" srcset="./images/my_website_github.png?width=800&quality=92 800w, ./images/my_website_github.png?width=1200&quality=92 1200w, ./images/my_website_github.png 2545w" sizes="(max-width: 767px) 90vw, (min-width: 2560px) 50vw, 60vw">
                         </a>
                     </div>
                 </div>
@@ -1158,7 +1153,7 @@
 
                 <div class="image-container">
                     <a href="https://drive.google.com/file/d/1PrqYG2gqoPiIip0i75nTQxt5qtgbkJRy/view" target="_blank" rel="noopener noreferrer">
-                        <img src="./images/sec_group.webp" alt="Network Traffic Analysis ft. Aaron Hurtado" loading="lazy" width="9600" height="7200">
+                        <img src="./images/sec_group.webp" alt="Network Traffic Analysis ft. Aaron Hurtado" loading="lazy" width="9600" height="7200" srcset="./images/sec_group.webp?width=800&quality=92 800w, ./images/sec_group.webp?width=1200&quality=92 1200w, ./images/sec_group.webp?width=3840&quality=92 3840w, ./images/sec_group.webp 9600w" sizes="(max-width: 767px) 90vw, (min-width: 2560px) 50vw, 60vw">
                     </a>
                 </div>
                 
