--- a/src/index.html
+++ b/src/index.html
@@ -104,13 +104,26 @@
     </header>
 
 
-    <nav class="sidebar">
+    <nav class="sidebar hidden" id="sidebar">
         <h6>Sections</h6>
         <ul>
             <li><a href="#about_me">About Me</a></li>
             <li><a href="#education">Education</a></li>
-            <li><a href="#experience">Experience</a></li>
-            <li><a href="#projects">Projects</a></li>
+            <li><a href="#experience">Experience</a>
+               <ul>
+                   <li><a href="#centene">Centene</a></li>
+                   <li><a href="#epsilon_systems">Epsilon Systems</a></li>
+               </ul>
+            </li>
+            <li><a href="#projects">Projects</a>
+                <ul>
+                    <li><a href="#crypto_trading_bot">Cryptocurrency Trading Bot</a></li>
+                    <li><a href="#ps5_purchasing_bot">PS5 Purchasing Bot</a></li>
+                    <li><a href="#this_website">This Website</a></li>
+                    <li><a href="#research_project_search_and_seizure">Search + Seizure</a></li>
+                    <li><a href="#research_project_network_traffic_analysis">Network Traffic Analysis</a></li>
+                </ul>
+            </li>
             <li><a href="#footer">Contact</a></li>
         </ul>
     </nav>
@@ -143,7 +156,7 @@
                 <div class="section-divider"></div>
 
 
-                <h2>Table of Contents</h2>
+                <!-- <h2>Table of Contents</h2>
 
                 <div class="toc-container">
                     <ol>
@@ -173,7 +186,7 @@
                 </div>
 
 
-                <div class="section-divider"></div>
+                <div class="section-divider"></div> -->
 
 
                 <h2>Technical Skills</h2>
