Added bullet point to website features

--- a/src/index.html
+++ b/src/index.html
@@ -913,6 +913,9 @@
                         Created a side navigation bar that automatically updates to show the current section the user is at. (Disabled on mobile devices due to limited screen space) 
                     </li>
                     <li>
+                        The side navigation bar disappears when you are at the top of the website looking at the banner image and reappears when you scroll down the page. 
+                    </li>
+                    <li>
                         Everytime you refresh the website, the banner image at the top of the page is randomly selected. Showcases pictures primarily featuring San Diego, CA.
                     </li>
                     <li>
