Added "Welcome" nav link

--- a/src/index.html
+++ b/src/index.html
@@ -107,6 +107,7 @@
     <nav class="sidebar hidden" id="sidebar">
         <h6>Sections</h6>
         <ul>
+            <li><a href="#hero">Welcome</a></li>
             <li><a href="#about_me">About Me</a></li>
             <li><a href="#education">Education</a></li>
             <li><a href="#experience">Experience</a>
